update import code to match separate import script. update stylesheet update workslip screen

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,9 +4,15 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "publish",
+            "label": "Publish to webserver",
             "type": "shell",
             "command": "robocopy ./ //abas-webapp/abaswebapp$/ *.* /E /R:0 /XD '.venv' '.vscode' '.git'",
+            "problemMatcher": []
+        },
+        {
+            "label": "Save to network",
+            "type": "shell",
+            "command": "robocopy ./ '//kasa-storage/IT/Code Repository/repos/abaswebapp/' *.* /E /R:0",
             "problemMatcher": []
         }
     ]
