--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,27 @@
-altgraph==0.17.4
 blinker==1.9.0
-click==8.1.7
+click==8.1.8
 colorama==0.4.6
 Flask==3.1.0
+flask-sock==0.7.0
+Flask-SQLAlchemy==3.1.1
+greenlet==3.1.1
+gunicorn==23.0.0
+h11==0.14.0
 itsdangerous==2.2.0
-Jinja2==3.1.4
+Jinja2==3.1.5
 MarkupSafe==3.0.2
-packaging==24.2
-pefile==2023.2.7
-pyinstaller-hooks-contrib==2025.2
-pywin32-ctypes==0.2.3
-setuptools==78.1.0
+numpy==2.2.2
+packaging==25.0
+pandas==2.2.3
+pymssql==2.3.2
+pyodbc==5.2.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+simple-websocket==1.1.0
+six==1.17.0
+SQLAlchemy==2.0.37
+Turbo-Flask==0.8.6
+typing_extensions==4.12.2
+tzdata==2025.1
 Werkzeug==3.1.3
+wsproto==1.2.0
