--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 blinker==1.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
 Flask==3.1.0
@@ -7,6 +9,7 @@ Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
 gunicorn==23.0.0
 h11==0.14.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
@@ -17,11 +20,13 @@ pymssql==2.3.2
 pyodbc==5.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
+requests==2.32.3
 simple-websocket==1.1.0
 six==1.17.0
 SQLAlchemy==2.0.37
 Turbo-Flask==0.8.6
 typing_extensions==4.12.2
 tzdata==2025.1
+urllib3==2.4.0
 Werkzeug==3.1.3
 wsproto==1.2.0
